--- a/editacc.html
+++ b/editacc.html
@@ -15,37 +15,29 @@
 
 <body>
     <div class="container">
-        <div class="screen">
+        <div class="">
             <div class="screen__content">
-                <form class="login">
+                <form class="login registr">
                     <div class="login__field">
-                        <i class="login__icon fas fa-user"></i>
-                        <input type="text" class="login__input" placeholder="Phone Number" minlength="4" maxlength="12">
+                        <input type="text" class="login__input" placeholder="Familya" minlength="4" maxlength="12">
                     </div>
                     <div class="login__field">
-                        <i class="login__icon fas fa-lock"></i>
+                        <input type="text" class="login__input" placeholder="Ism" minlength="4" maxlength="12">
+                    </div>
+                    <div class="login__field">
+                        <input type="text" class="login__input" placeholder="Otasining ismi" minlength="4" maxlength="12">
+                    </div>
+                    <div class="login__field">
+                        <input type="number" class="login__input" placeholder="Phone Number" minlength="4" maxlength="12">
+                    </div>
+                    <div class="login__field">
                         <input type="password" class="login__input" placeholder="Password" minlength="4" maxlength="12">
                     </div>
                     <p class="error__parol"></p>
                     <button class="button login__submit">
-                        <span class="button__text">Log In Now</span>
-                        <i class="button__icon fas fa-chevron-right"></i>
+                        <span class="button__text">Saqlash</span>
                     </button>
                 </form>
-                <div class="social-login">
-                    <h3>Math</h3>
-                    <div class="social-icons">
-                        <a href="#" class="social-login__icon fab fa-instagram"></a>
-                        <a href="#" class="social-login__icon fab fa-facebook"></a>
-                        <a href="#" class="social-login__icon fab fa-twitter"></a>
-                    </div>
-                </div>
-            </div>
-            <div class="screen__background">
-                <span class="screen__background__shape screen__background__shape4"></span>
-                <span class="screen__background__shape screen__background__shape3"></span>
-                <span class="screen__background__shape screen__background__shape2"></span>
-                <span class="screen__background__shape screen__background__shape1"></span>
             </div>
         </div>
     </div>
