--- a/loginerror.html
+++ b/loginerror.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Ro'yxatdan O'tish</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/brands.min.css" integrity="sha512-nS1/hdh2b0U8SeA8tlo7QblY6rY6C+MgkZIeRzJQQvMsFfMQFUKp+cgMN2Uuy+OtbQ4RoLMIlO2iF7bIEY3Oyg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -18,26 +18,35 @@
         <div class="screen">
             <div class="screen__content">
                 <form class="login registr">
-                    <div class="login__field">
-                        <i class="login__icon fas fa-user"></i>
-                        <input type="text" class="login__input" placeholder="User name / Email" minlength="4" maxlength="12">
+                    <div class="login__field registr__filed">
+                        <input type="text" class="login__input" placeholder="Familya" minlength="4" maxlength="12">
                     </div>
-                    <div class="login__field">
-                        <i class="login__icon fas fa-lock"></i>
-                        <input type="password" class="login__input" placeholder="Password" minlength="4" maxlength="12" >
+                    <div class="login__field registr__filed">
+                        <input type="text" class="login__input" placeholder="Ism" minlength="4" maxlength="12">
                     </div>
-                    <div class="login__field">
-                        <i class="login__icon fas fa-lock"></i>
+                    <div class="login__field registr__filed">
+                        <input type="text" class="login__input" placeholder="Otasining ismi" minlength="4" maxlength="12">
+                    </div>
+                    <div class="login__field registr__filed">
+                        <input type="number" class="login__input" placeholder="Telefon Raqam" minlength="4" maxlength="12">
+                    </div>
+                    <div class="login__field registr__filed">
+                        <input type="number" class="login__input" placeholder="Guruh Raqami" minlength="4" maxlength="12">
+                    </div>
+                    <div class="login__field registr__filed">
                         <input type="password" class="login__input" placeholder="Password" minlength="4" maxlength="12">
-                        <p class="error__parol">Parollar xato</p>
                     </div>
+                    <div class="login__field registr__filed">
+                        <input type="password" class="login__input" placeholder="Password" minlength="4" maxlength="12">
+                    </div>
+                    <p class="error__parol">Malumotlarda Xatolik</p>
                     <button class="button login__submit">
-                        <span class="button__text">Log In Now</span>
+                        <span class="button__text">Ro'yxatdan O'tish</span>
                         <i class="button__icon fas fa-chevron-right"></i>
                     </button>
                 </form>
                 <div class="social-login">
-                    <h3>Math</h3>
+                    <h3>  </h3>
                     <div class="social-icons">
                         <a href="#" class="social-login__icon fab fa-instagram"></a>
                         <a href="#" class="social-login__icon fab fa-facebook"></a>
