--- a/main.html
+++ b/main.html
@@ -51,6 +51,9 @@
             <li class="nav-item">
               <a class="nav-link" href="./login.html">Kirish</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./editacc.html">Kirish</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -206,7 +209,7 @@
       <div class="row">
         <div class="footer__content">
           <div class="footer__icons">
-            <a href="#"><i class="fa-brands fa-telegram"></i></a>
+            <a href="https://t.me/buronraxmonov"><i class="fa-brands fa-telegram"></i></a>
             <a href="#"><i class="fa-solid fa-phone"></i></a>
             <a href="#"><i class="fa-brands fa-instagram"></i></a>
             <a href="#"><i class="fa-brands fa-facebook"></i></a>
